feat: rename package to @alok5953/videoextract and update version to 1.0.7
- Updated package name and version in package.json and package-lock.json.
- Added new dependencies including zod and removed deprecated crypto package.
- Enhanced postinstall scripts for better user guidance on installation.
- Updated CLI versioning to reflect the new package version.
- Improved video extraction logging to include timeline overlays count and duration.
- Added progress callback to video rendering process for better feedback.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "videoextract",
-  "version": "1.0.0",
+  "name": "@alok5953/videoextract",
+  "version": "1.0.7",
   "description": "A CLI tool to extract videos from JSON timeline files using Remotion",
   "main": "dist/src/index.js",
   "bin": {
@@ -12,10 +12,18 @@
     "render": "ts-node src/index.tsx",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
-    "postinstall": "./scripts/postinstall.sh",
+    "postinstall": "node scripts/postinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["video", "remotion", "cli", "extract", "timeline", "video-processing", "video-generation"],
+  "keywords": [
+    "video",
+    "remotion",
+    "cli",
+    "extract",
+    "timeline",
+    "video-processing",
+    "video-generation"
+  ],
   "author": "Alok Kaushik <alokkaushik5953@gmail.com>",
   "license": "ISC",
   "repository": {
@@ -31,54 +39,57 @@
   },
   "files": [
     "dist/**/*",
+    "src/**/*",
+    "lib/**/*",
+    "scripts/**/*",
+    "package.json",
     "README.md"
   ],
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@remotion/bundler": "4.0.324",
     "@remotion/cli": "4.0.324",
     "@remotion/google-fonts": "4.0.324",
     "@remotion/renderer": "4.0.324",
     "@remotion/tailwind-v4": "4.0.324",
-    "@types/webpack": "^5.28.5",
     "@types/crypto-js": "^4.2.2",
+    "@types/webpack": "^5.28.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commander": "^14.0.0",
+    "crypto-js": "^4.2.0",
+    "framer-motion": "^11.5.6",
+    "gray-matter": "^4.0.3",
+    "js-file-download": "^0.4.12",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-best-gradient-color-picker": "^3.0.14",
     "react-dom": "^19.1.0",
     "remotion": "4.0.324",
     "tailwind-merge": "^3.3.1",
-    "webpack": "^5.100.2",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.1",
     "uuid": "^11.0.5",
-    "framer-motion": "^11.5.6",
-    "lodash": "^4.17.21",
+    "webpack": "^5.100.2",
     "xmlbuilder": "^15.1.1",
-    "js-file-download": "^0.4.12",
-    "crypto-js": "^4.2.0",
-    "crypto": "^1.0.1",
-    "gray-matter": "^4.0.3"
-
+    "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^24.0.14",
     "@types/react": "^18.2.0",
-    "@types/crypto-js": "^4.2.2",
     "esbuild": "^0.25.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "@types/lodash": "^4.17.12"
+    "typescript": "^5.8.3"
   }
 }
