--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alok5953/videoextract",
-  "version": "1.0.7",
+  "name": "videoextract-cli",
+  "version": "1.0.0",
   "description": "A CLI tool to extract videos from JSON timeline files using Remotion",
   "main": "dist/src/index.js",
   "bin": {
