--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@remotion/bundler": "4.0.324",
-    "@remotion/cli": "4.0.324",
+    "@remotion/bundler": "^4.0.339",
+    "@remotion/cli": "^4.0.339",
     "@remotion/google-fonts": "4.0.324",
-    "@remotion/renderer": "4.0.324",
-    "@remotion/tailwind-v4": "4.0.324",
+    "@remotion/renderer": "^4.0.339",
+    "@remotion/tailwind-v4": "^4.0.339",
     "@types/crypto-js": "^4.2.2",
     "@types/webpack": "^5.28.5",
     "class-variance-authority": "^0.7.1",
@@ -77,7 +77,7 @@
     "react": "^19.1.0",
     "react-best-gradient-color-picker": "^3.0.14",
     "react-dom": "^19.1.0",
-    "remotion": "4.0.324",
+    "remotion": "^4.0.339",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.0.5",
     "webpack": "^5.100.2",
